Fix text being cut off on about page

--- a/src/sass/ctf.scss
+++ b/src/sass/ctf.scss
@@ -490,6 +490,12 @@ body.compete {
   padding: 8px 48px;
   text-align: left;
 }
+.wrapper {
+  text-align: left;
+}
+.row {
+  padding: 6px;
+}
 .info .left-info {
   text-align: left;
   width: 180px;
